A general approach to backtracking questions in Java (Subsets, Permutations, Combination Sum, Pali